--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
-node_modules/
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+*.swp
+
+# Optional npm cache directory
+.npm
+
+node_modules
 coverage/
 .nyc_output/
-package-lock.json
-nodemon.json
+
+# Editors
+.idea
+.vscode
+*.iml
+modules.xml
+*.ipr
+
+# OS metadata
+.DS_Store
+Thumbs.db
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
