--- a/package.json
+++ b/package.json
@@ -2,6 +2,24 @@
   "name": "nodejs-telegram",
   "version": "1.0.0",
   "description": "Telegram Cli in Nodejs",
+  "keywords": [
+    "telegram",
+    "telegram-api",
+    "telegram-cli",
+    "telegram-bot",
+    "telegram-mtproto",
+    "node-telegram",
+    "nodejs-telegram"
+  ],
+  "author": "DiLong Fa <dilongfa@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dilongfa/nodejs-telegram.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dilongfa/nodejs-telegram/issues"
+  },
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -13,30 +31,8 @@
       "@semantic-release/github"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dilongfa/nodejs-telegram.git"
-  },
-  "keywords": [
-    "telegram",
-    "telegram-api",
-    "telegram-cli",
-    "telegram-bot",
-    "telegram-mtproto",
-    "telegraf",
-    "tele",
-    "mtproto"
-  ],
-  "author": "Pham Dinh Long",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/dilongfa/nodejs-telegram/issues"
-  },
-  "homepage": "https://github.com/dilongfa/nodejs-telegram#readme",
   "dependencies": {
     "debug": "^3.1.0"
   },
-  "devDependencies": {
-    "semantic-release": "15.10.6"
-  }
+  "devDependencies": {}
 }
